--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
 	"name": "greeny/maillibrary",
 	"description": "This library allows you to get mails from mail server.",
+	"version" : "1.0.0"
 	"license": "MIT",
 	"authors": [
 		{
