--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
         }
     ],
     "autoload": {
-        "classmap": ["MailLibrary/"]
+        "files": ["MailLibrary/loader.php"]
     },
     "require": {
         "php": ">= 5.3.0"
