--- a/composer.json
+++ b/composer.json
@@ -9,12 +9,14 @@
         }
     ],
     "autoload": {
-        "files": ["MailLibrary/loader.php"]
+        "psr-4": {
+            "greeny\\MailLibrary\\": "src"
+        }
     },
     "require": {
-        "php": ">= 5.3.0"
+        "php": ">= 5.4.0"
     },
     "require-dev": {
-        "nette/tester": "@dev"
+        "nette/tester": "^1.6"
     }
 }
