--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
     },
     "require": {
         "php": ">= 5.3.0",
-        "ext-imap": "*"
+        "ext-imap": "*",
+        "nette/utils": "~2.2"
     },
     "require-dev": {
         "nette/tester": "@dev"
