--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
 	"require": {
 		"php": ">= 5.4.0",
 		"ext-imap": "*",
-		"ext-mbstring": "*"
+		"ext-mbstring": "*",
+		"ext-iconv": "*"
 	},
 	"require-dev": {
 		"nette/tester": "@dev"
